Fix ipconfig encoding (cp850) and update README with detailed setup guide